--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function copy(dest, source) {
 
 <div class="container">
 <p>
-<b>PAGE NOT COMPLETE OR ACCURATE YET.</b>
+<b>PAGE NOT COMPLETE OR ACCURATE YET</b>
 <br>
 <br>
 I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
@@ -140,9 +140,10 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
 <hr>
 	
-    <h2>Selected Papers</h2>
+    <h2>Selected Papers <a href="all_papers.html" class="button">(View All Papers)</a></h2>
     <ul id="papersList"></ul>
- 	<a href="all_papers.html" class="button">(View All Papers)</a>
+
+	<script src="scripts.js"></script>
     <hr>	
     <h2>Talks</h2>
     <ul id='talksList' style='list-style-type: none; padding-left: 0;'>
@@ -229,8 +230,6 @@ function copy(id) {
 	add_talk("Sample Paper Title2", "Location A, Location B", "Sample talk abstract.", "#", "#");
     </script>
 </div>
-
-<script src="scripts.js"></script>
 	
 <hr>	
 <!--
