--- a/all_papers.html
+++ b/all_papers.html
@@ -19,5 +19,10 @@
     <ul id="allPapersList" style='list-style-type: none; padding-left: 0;'></ul>
 
     <script src="scripts.js"></script>
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        renderPapers();
+    });
+</script>
 </body>
 </html>
