--- a/index.html
+++ b/index.html
@@ -144,6 +144,11 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
     <ul id="papersList"></ul>
 
 	<script src="scripts.js"></script>
+	<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        renderPapers();
+    });
+</script>
     <hr>	
     <h2>Talks</h2>
     <ul id='talksList' style='list-style-type: none; padding-left: 0;'>
