--- a/Paper.html
+++ b/Paper.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Paper</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jasper Shogren-Knaak">
+    <meta name="keywords" content="Jasper Shogren-Knaak, Jasper Shogren-Knaak nyu, Jasper Shogren-Knaak math, Jasper Shogren-Knaak Stanford, 刘丘雨">
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="Notes & Expository Writing.">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+  	<link rel="stylesheet" type="text/css" media="screen,print" href="css/style.css" />
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
+	<link rel="icon" type="image/png" href="images/CourantLogo.png">
+</head>
+	
+<script>
+function copy(dest, source) {
+  if(dest.source == source) {
+    dest.innerHTML = "";
+    dest.source = null;
+    dest.style.width="0px";
+    dest.style.border = "";
+    dest.style.padding = "0px";
+    dest.style.margin = "0px";
+  }
+  else {
+    dest.innerHTML = source.innerHTML;
+    dest.source = source;
+    dest.style.width = "800px";
+    dest.style.padding = "10px";
+    dest.style.border = "2px dotted gray";
+    dest.style.background = "#F5F5F5";
+    dest.style.margin = "10px";
+  }
+  dest.blur();
+}
+</script>
+<div class="container">
+<br>
+
+<div class="row">
+<!--
+<h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
+<h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
+-->
+
+<div class="col-sm-7">
+<h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
+</div>
+<div class="col-sm-5">
+<div class="clearfix visible-xs-block"></div>
+<h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
+</div>
+	
+<!-- <div class="col-sm-2">
+<br><br><br>
+<img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
+</div> -->
+</div>
+<hr>
+<ul>
+    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
+    </li>
+</ul>
+<!--<a href="chinese.html">中文版</a>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+</div>
+<br>
+<br>
+</body>
+</html>
 
