--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
 <hr>
 	
-    <h2>Papers</h2>
+    <h2>Selected papers <a href="Paper.html">(All papers)</a></h2>
     <ul id="papersList"></ul>
     <hr>	
     <h2>Talks</h2>
