--- a/Notes.html
+++ b/Notes.html
@@ -46,7 +46,7 @@ function copy(dest, source) {
 -->
 
 <div class="col-sm-7">
-<h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
+<h2>Papers: <span style="font-family:STFangsong; font-size:20pt">
 </div>
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
