--- a/Paper.html
+++ b/Paper.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/png" href="images/CourantLogo.png">
 </head>
 	
-<script>
+<!-- <script>
 function copy(dest, source) {
   if(dest.source == source) {
     dest.innerHTML = "";
@@ -35,7 +35,8 @@ function copy(dest, source) {
   }
   dest.blur();
 }
-</script>
+</script> -->
+	
 <div class="container">
 <br>
 
@@ -46,26 +47,72 @@ function copy(dest, source) {
 -->
 
 <div class="col-sm-7">
-<h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
+<h2>Papers: <span style="font-family:STFangsong; font-size:20pt">
 </div>
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
 <h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
 </div>
 	
-<!-- <div class="col-sm-2">
-<br><br><br>
-<img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
-</div> -->
+<div class="container">
+    <ul id="papersList"></ul>
+
+    <script>
+        let paper_count = 0;
+
+        let lastShown = null; // Variable to track the last shown element
+
+function add_paper(title, authors, conference, link, bib, abstract, arxiv_link, journal_link, data, slides, talk, msg) {
+    const listEntry = `
+        <li style="font-size:18px">
+            <b>${title}</b><br>${authors}.<br>${conference}.<br>
+            ${bib ? `<a href="javascript:copy('bib${paper_count}')" class="button">[bib]</a>` : ''}
+            ${abstract ? `<a href="javascript:copy('abstract${paper_count}')" class="button">[abstract]</a>` : ''}
+            ${arxiv_link ? `<a href="${arxiv_link}" class="button">[arXiv]</a>` : ''}
+            ${journal_link ? `<a href="${journal_link}" class="button">[journal]</a>` : ''}
+	    ${talk ? `<a href="#${title.replace(/\s+/g, '_')}" class="button">[talk]</a>` : ''}
+            ${data ? `<a href="${data}" class="button">[data]</a>` : ''}
+            ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
+            ${msg ? `<i>${msg}</i>` : ''}
+
+            ${bib ? `<div id="bib${paper_count}" style="display:none; margin-top: 10px; padding-left: 20px; max-width: 100%; width: calc(100% - 40px);">${bib}</div>` : ''}
+            ${abstract ? `<div id="abstract${paper_count}" style="display:none; margin-top: 10px; padding-left: 20px; max-width: 100%; width: calc(100% - 40px);">${abstract}</div>` : ''}
+        </li>
+    `;
+
+    document.getElementById("papersList").innerHTML += listEntry;
+    paper_count++;
+}
+
+function copy(id) {
+    // Hide the last shown element if it's different from the current one
+    if (lastShown && lastShown !== id) {
+        document.getElementById(lastShown).style.display = "none";
+    }
+
+    const element = document.getElementById(id);
+    if (element.style.display === "none") {
+        element.style.display = "block"; // Show the element
+        element.style.width = "800px"; // Adjust width as needed
+        element.style.padding = "10px"; // Adjust padding as needed
+        element.style.border = "2px dotted gray"; // Set border
+        element.style.background = "#F5F5F5"; // Set background color
+        lastShown = id; // Update the last shown element
+    } else {
+        element.style.display = "none"; // Hide the element
+        lastShown = null; // Reset last shown if hiding
+    }
+}
+
+        // Example calls to add papers and talks
+        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+        add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+    </script>
 </div>
-<hr>
-<ul>
-    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
-    </li>
-</ul>
-<!--<a href="chinese.html">中文版</a>-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-</div>
+	
 <br>
 <br>
 </body>
