--- a/Paper.html
+++ b/Paper.html
@@ -41,20 +41,15 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
-<!--
-<h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
-<h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
--->
-
-<div class="col-sm-7">
-<h2>Papers: <span style="font-family:STFangsong; font-size:20pt">
-</div>
-<div class="col-sm-5">
-<div class="clearfix visible-xs-block"></div>
-<h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
-</div>
+	<div class="col-sm-7">
+		<h2>Papers: <span style="font-family:STFangsong; font-size:20pt">
+	</div>
+	<div class="col-sm-5">
+		<div class="clearfix visible-xs-block"></div>
+		<h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
+	</div>	
+<div>
 	
-<div class="container">
     <ul id="papersList"></ul>
 
     <script>
