--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
 <hr>
 	
-    <h2>Selected (mostly recent) papers</h2>
-	<span style="font-family: Lato; font-size:17px;"><a href="Paper.html">[All papers]</a>.
+    <h2>Selected and recent papers [<a href="Paper.html">[All papers]</a>]:</h2>
     <ul id="papersList"></ul>
 	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.
     <hr>	
