--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 </p>
 
 <hr>
-	
-    <h2>Selected and recent papers [<a href="Paper.html">all papers</a>]:</h2>
+<h2>Papers:</h2>
+<!--     <h2>Selected papers <a href="Paper.html">[all papers]</a>:</h2> -->
     <ul id="papersList"></ul>
-	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.
+<!-- 	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>. -->
     <hr>	
     <h2>Talks</h2>
     <ul id='talksList' style='list-style-type: none; padding-left: 0;'>
