--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 </p>
 
 <hr>
-<h2>Papers:</h2>
+<h2>Papers</h2>
 <!--     <h2>Selected papers <a href="Paper.html">[all papers]</a>:</h2> -->
     <ul id="papersList"></ul>
 <!-- 	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>. -->
