--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ function copy(id) {
 }
 
         // Example calls to add papers and talks
-        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", , "Sample Bib", "Sample abstract.",, , ,, , );
+        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", null, "Sample Bib", "Sample abstract.", null, null, null, null, null, null);
 	add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
         add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
