--- a/index.html
+++ b/index.html
@@ -215,17 +215,14 @@ function copy(id) {
 }
 
         // Example calls to add papers and talks
-        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", null, "Sample Bib", "Sample abstract.", "arxiv_link", "journal_link", null, null, "talk", null);
-	add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-        add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-	add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
-	add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+ //        add_paper("Sample Paper Title1", "Author One, Author Two", "Sample Conference", null, "Sample Bib", "Sample abstract.", "arxiv_link", "journal_link", null, null, "talk", null);
+	// add_paper("Sample Paper Title2", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+ //        add_paper("Sample Paper Title3", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	// add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
+	// add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	  
-	add_talk("Sample Paper Title1", "Location A, Location B", "Sample talk abstract.", "#", "#");
-	add_talk("Sample Paper Title4", "Location A, Location B", "Sample talk abstract.", "#", "#");
-	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
-	add_talk("Sample Talk Title", "Location A, Location B", "Sample talk abstract.", "#", "#");
-	add_talk("Sample Paper Title2", "Location A, Location B", "Sample talk abstract.", "#", "#");
+	add_talk("A surface sum approach to lattice Yang—Mills in the large-N limit", "MIT Probability Seminar, Nov. '24, NYU Student Probability Seminar Oct. '24", "Recently, Cao, Park, and Sheffield showed how to express Wilson loop expectations as sums of embedded maps for finite N-dimensional matrix group lattice Yang-Mills models. In this talk, I will present a sum of embedded maps formula for Wilson loop expectations in the large-N limit. In particular, to establish such a formula, I will explain how to interpret the master loop equation as a “peeling” exploration on maps and provide a description of “map cancellations”. Time permitting, I will illustrate how to use these tools to explicitly compute Wilson loop expectations in dimension two. This last result was previously established by Basu and Ganguly (2016) using different techniques.\n\nThis is joint work with Jacopo Borga and Sky Cao.", "#", null);
+
     </script>
 </div>
 
