--- a/index.html
+++ b/index.html
@@ -123,9 +123,6 @@ function copy(dest, source) {
 
 <div class="container">
 <p>
-<b>PAGE NOT COMPLETE OR ACCURATE YET.</b>
-<br>
-<br>
 I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
 <br>
 <br>
@@ -221,7 +218,7 @@ function copy(id) {
 	// add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	// add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	  
-	add_talk("A surface sum approach to lattice Yang—Mills in the large-N limit", "MIT Probability Seminar, Nov. '24, NYU Student Probability Seminar Oct. '24", "Recently, Cao, Park, and Sheffield showed how to express Wilson loop expectations as sums of embedded maps for finite N-dimensional matrix group lattice Yang-Mills models. In this talk, I will present a sum of embedded maps formula for Wilson loop expectations in the large-N limit. In particular, to establish such a formula, I will explain how to interpret the master loop equation as a “peeling” exploration on maps and provide a description of “map cancellations”. Time permitting, I will illustrate how to use these tools to explicitly compute Wilson loop expectations in dimension two. This last result was previously established by Basu and Ganguly (2016) using different techniques.\n\nThis is joint work with Jacopo Borga and Sky Cao.", "#", null);
+	add_talk("A surface sum approach to lattice Yang—Mills in the large-N limit", "MIT Probability Seminar, Nov. '24, NYU Student Probability Seminar Oct. '24", "Recently, Cao, Park, and Sheffield showed how to express Wilson loop expectations as sums of embedded maps for finite N-dimensional matrix group lattice Yang-Mills models. In this talk, I will present a sum of embedded maps formula for Wilson loop expectations in the large-N limit. In particular, to establish such a formula, I will explain how to interpret the master loop equation as a “peeling” exploration on maps and provide a description of “map cancellations”. Time permitting, I will illustrate how to use these tools to explicitly compute Wilson loop expectations in dimension two. This last result was previously established by Basu and Ganguly (2016) using different techniques.<br><br>This is joint work with Jacopo Borga and Sky Cao.", "#", null);
 
     </script>
 </div>
