--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ function add_talk(title, locations, talk_abstract, slides, recording) {
             <span style="padding-left: 20px;">${locations}</span><br>
             <span style="padding-left: 20px;">
                 ${talk_abstract ? `<a href="javascript:copy('talk_abstract${talk_count}')" class="button">[abstract]</a>` : ''}
-                ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
+                ${slides ? `<a href="${slides}" target="_blank" class="button">[slides]</a>` : ''}
                 ${recording ? `<a href="${recording}" class="button">[recording]</a>` : ''}
             </span>
             ${talk_abstract ? `<div id="talk_abstract${talk_count}" style="display:none; margin-top: 10px; padding-left: 40px; margin-left: 20px; max-width: 100%; width: calc(100% - 60px);">${talk_abstract}</div>` : ''}
@@ -218,7 +218,7 @@ function copy(id) {
 	// add_paper("Sample Paper Title4", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	// add_paper("Sample Paper Title5", "Author One, Author Two", "Sample Conference", "#", "Sample Bib", "Sample abstract.", "#", "#", "#", "#", "#", "#");
 	  
-	add_talk("A surface sum approach to lattice Yang—Mills in the large-N limit", "MIT Probability Seminar Nov. 2024, NYU Student Probability Seminar Oct. 2024", "Recently, Cao, Park, and Sheffield (2023) showed how to express Wilson loop expectations as sums of embedded maps for finite N-dimensional matrix group lattice Yang-Mills models. In this talk, I will present a sum of embedded maps formula for Wilson loop expectations in the large-N limit. In particular, to establish such a formula, I will explain how to interpret the master loop equation as a “peeling” exploration on maps and provide a description of “map cancellations”. Time permitting, I will illustrate how to use these tools to explicitly compute Wilson loop expectations in dimension two. This last result was previously established by Basu and Ganguly (2018) using different techniques.<br><br>This is joint work with Jacopo Borga and Sky Cao.", "Slides/A_surface_sum_approach_to_lattice_Yang—Mills_in_the_large-N_limit_slides.pdf" target="_blank", null);
+	add_talk("A surface sum approach to lattice Yang—Mills in the large-N limit", "MIT Probability Seminar Nov. 2024, NYU Student Probability Seminar Oct. 2024", "Recently, Cao, Park, and Sheffield (2023) showed how to express Wilson loop expectations as sums of embedded maps for finite N-dimensional matrix group lattice Yang-Mills models. In this talk, I will present a sum of embedded maps formula for Wilson loop expectations in the large-N limit. In particular, to establish such a formula, I will explain how to interpret the master loop equation as a “peeling” exploration on maps and provide a description of “map cancellations”. Time permitting, I will illustrate how to use these tools to explicitly compute Wilson loop expectations in dimension two. This last result was previously established by Basu and Ganguly (2018) using different techniques.<br><br>This is joint work with Jacopo Borga and Sky Cao.", "Slides/A_surface_sum_approach_to_lattice_Yang—Mills_in_the_large-N_limit_slides.pdf", null);
 
     </script>
 </div>
