--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ function copy(dest, source) {
 
 <div class="row">
 <div class="col-sm-4">
-<a href="images/SpinasePic.png">
+<!-- <a href="images/SpinasePic.png"> -->
 <img class="img-responsive" style="max-height:300px;" src="images/SpinasePic.png"/>
-</a>
+<!-- </a> -->
 </div>
 
 <div class="col-sm-7">
