--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ function copy(dest, source) {
 </div>
 <br>
 
-<div class="container">
+<!-- <div class="container"> -->
 <p>
-I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
+I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant. Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
 <br>
 <br>
 I am mainly interested in probability and PDEs, specifically their connections to statistical mechanics. <!--I particularly  like problems that are multiscale and/or dynamical in nature.-->
@@ -134,6 +134,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 <br> -->
 </p>
 
+<div class="container">
 <hr>
 <h2>Papers</h2>
 <!--     <h2>Selected papers <a href="Paper.html">[all papers]</a>:</h2> -->
