--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
   }
 }
 
+#talksList li:before {
+    content: "■"; /* Unicode character for a solid square */
+    color: black; /* Color of the square */
+    display: inline-block; /* Ensures it sits nicely beside text */
+    width: 0.5em; /* Smaller width for the square */
+    margin-right: 10px; /* Space between square and text */
+    font-size: 0.5em; /* Adjusted size of the square */
+    vertical-align: middle; /* Aligns the square with the text */
+} 
+
 
 
 	
