--- a/index.html
+++ b/index.html
@@ -45,6 +45,27 @@
     vertical-align: middle; /* Aligns the square with the text */
 } 
 
+/* Style the talk list item to use flexbox for better alignment */
+#talksList li {
+    font-size: 18px;
+    display: flex; /* Use flexbox for alignment */
+    flex-wrap: wrap; /* Allow wrapping of content */
+    align-items: flex-start; /* Align items at the start */
+    padding-left: 20px;
+}
+
+/* The title part will take up available space */
+#talksList li > b {
+    flex: 1; /* Allow title to take up available space */
+    margin-right: 20px; /* Ensure some space between title and location/abstract */
+}
+
+/* Style for location (and other elements like abstract) */
+#talksList li > span {
+    padding-left: 20px;
+    flex-basis: 100%; /* Ensure it takes the full width if the title wraps */
+}
+
 
 
 	
@@ -125,7 +146,7 @@ function copy(dest, source) {
 
 <!-- <div class="container"> -->
 <p>
-I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant. Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
+II am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant. Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
 <br>
 <br>
 I am mainly interested in probability and PDEs, specifically their connections to statistical mechanics. <!--I particularly  like problems that are multiscale and/or dynamical in nature.-->
